--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="target"></div>
-  <script src="bundle/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
